:hammer: succedd crud
